# Uni-C

./: .gitignore  CMakeLists.txt  Design  LICENSE.md  README.md  TestComp.sh  TestCompile.bat  builtin.asm  kernel32Functions.txt  test.ilk
VSCodeHighlighterExtention/uni-c-syntax/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
VSCodeHighlighterExtention/uni-c-syntax/syntaxes/: uni-c.tmLanguage.json
include/: CompilerInformation.h
include/Export/: AssemblyGenerator.h  BuilderTools.h  InternalFunctions.h
include/InputStream/: Arguments.h  Configurator.h  File.h
include/Parsing/: LexicalAnalyser.h  SemanticAnalyser.h  SemanticVariables.h  Tokens.h  UtilityFunctions.h
src/: main.cpp
src/Export/: AssemblyGenerator.cpp  BuilderTools.cpp  ExternalFunctions.cpp  x86_64-Generation.cpp
src/InputStream/: Arguments.cpp  Configurator.cpp  File.cpp
src/Parsing/: LexicalAnalyser.cpp  SemanticAnalyser.cpp  UtilityFunctions.cpp
test/: SimpleExit.uc  SimpleExit2.uc
